--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-helmet": "^5.0.14",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
+    "ag-grid-community": "^22.1.1",
+    "ag-grid-react": "^22.1.1",
     "antd": "^3.26.3",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
@@ -19,11 +22,16 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.18",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "source-map-explorer": "^2.1.2",
     "typescript": "^3.7.4"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
