--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react-hot-loader": "^4.12.18",
+    "@hot-loader/react-dom": "^16.11.0",
     "@types/jest": "^24.0.24",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
@@ -16,12 +19,13 @@
     "antd": "^3.26.3",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
+    "lodash": "^4.17.15",
+    "lodash-es": "^4.17.15",
     "node-sass-chokidar": "^1.4.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
