--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-hot-loader": "^4.12.18",
     "@hot-loader/react-dom": "^16.11.0",
     "@types/jest": "^24.0.24",
     "@types/lodash": "^4.14.149",
@@ -17,6 +16,7 @@
     "ag-grid-community": "^22.1.1",
     "ag-grid-react": "^22.1.1",
     "antd": "^3.26.3",
+    "axios": "^0.19.1",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "lodash": "^4.17.15",
@@ -26,6 +26,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
