--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-helmet": "^5.0.14",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/victory": "^33.1.4",
     "ag-grid-community": "^22.1.1",
     "ag-grid-react": "^22.1.1",
     "antd": "^3.26.3",
@@ -26,6 +27,7 @@
     "node-sass-chokidar": "^1.4.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
+    "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.18",
@@ -35,7 +37,8 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "source-map-explorer": "^2.1.2",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "victory": "^34.0.0"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
