--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-helmet": "^5.0.14",
+    "@types/react-input-autosize": "^2.0.2",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/victory": "^33.1.4",
@@ -20,10 +21,12 @@
     "ag-grid-react": "^22.1.1",
     "antd": "^3.26.3",
     "axios": "^0.19.1",
+    "classnames": "^2.2.6",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
+    "node-sass": "^4.14.0",
     "node-sass-chokidar": "^1.4.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
@@ -31,9 +34,10 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.18",
+    "react-input-autosize": "^2.2.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "source-map-explorer": "^2.1.2",
